# aiida-3dd

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.json  setup.py
aiida_3dd/: __init__.py
aiida_3dd/cli/: __init__.py
aiida_3dd/cli/analyse/: __init__.py  results.py
aiida_3dd/cli/analyse/completion/: __init__.py  cmd_relax.py  cmd_scf.py
aiida_3dd/cli/analyse/stages/: __init__.py  cmd_relax.py  cmd_scf.py
aiida_3dd/cli/launch/: __init__.py  relax.py  scf.py
aiida_3dd/cli/params/: options.py
