[build-system]
requires = ['setuptools>=40.8.0', 'wheel', 'reentry~=1.3', 'fastentrypoints~=0.12']
build-backend = 'setuptools.build_meta:__legacy__'

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    'bad-continuation',
    'cyclic-import',
    'duplicate-code',
    'import-outside-toplevel',
    'logging-fstring-interpolation',
    'no-else-raise',
    'too-few-public-methods',
    'too-many-ancestors',
    'too-many-arguments',
    'too-many-instance-attributes',
    'too-many-locals',
    'wrong-import-order',
    'wrong-import-position',
]

[tool.pylint.basic]
good-names = [
    '_',
    'pk',
]
